# CopyWork

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: AppState.h  Constants.h  CursesWrapper.h  Renderer.h  WrappedText.h
src/: AppState.cpp  Renderer.cpp  WrappedText.cpp  main.cpp
